[package]
name = "top-bid-websocket-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.23.1" }
tokio = { version = "1.39.3", features = [
	"macros",
	"rt-multi-thread",
	"signal",
	"sync",
	"time",
] }
alloy-primitives = { version = "0.8.0" }
ethereum_ssz = "0.7.0"
ethereum_ssz_derive = "0.7.0"
http = "1.1.0"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std"] }
